This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.6
  Disable folder compare tree-view by default (#2714968)
  Bugfix: Says files are identical after making files different in another
    application and re-loading them (#2672737)
  Bugfix: Difference pane didn't show added lines (#2710146)
  Bugfix: Did not show difference at end of line (#2638045)
  Bugfix: Files with missing last EOL weren't merged correctly (#2712120)
  Translation updates:
  - Czech (r6581)
  - Polish (#2717382, #2720875)

WinMerge 2.13.5 - 2009-03-19 (r6579)
  Remember last target folder for Copy/Move to in folder compare (#2659228)
  Add shortcut for Discard All in save confirmation dialog (#2559560)
  Initialize folder selection dialog to currently selected folder in
    options dialog (r6570)
  Expand/collapse folders from keyboard (#2203904)
  Bugfix: Filename extension column was empty for files (#2670046)
  Bugfix: Crash when selecting backup folder (#2686382)
  bugfix: Swapping panes did not update statusbar (#2661838)
  Translation updates:
  - Czech (r6530)
  - Dutch (#2672852)
  - Swedish (#2669562)

WinMerge 2.13.4 - 2009-03-03 (r6529)
  Add option for setting line difference wordbreak characters (#2655563)
  Put temp files to per-instance subfolder in temp folder (#2582768)
  Use new compare status icons for editor windows (#2205583)
  Add menuitems for selecting automatic or manual prediffing (#2638608)
  Bugfix: Files without extension get backed up to name..bak (#2627752)
  Bugfix: Crash opening config log (#2630027)
  Bugfix: Must Show Different to Show L/R Unique (#2129561)
  Translation updates:
  - Danish (#2648183)
  - Galician (#2632173)
  - Greek (#2615285)

WinMerge 2.13.3 - 2009-02-17 (r6479)
  Use three-digit version numbers in GUI (#2585662)