@@ -38,10 +38,11 @@ enum COLORINDEX
     COLORINDEX_STRING,
     COLORINDEX_PREPROCESSOR,
     //
-    COLORINDEX_HIGHLIGHTBKGND1,
+    COLORINDEX_HIGHLIGHTBKGND1, // standard
     COLORINDEX_HIGHLIGHTTEXT1,
-    COLORINDEX_HIGHLIGHTBKGND2,
+    COLORINDEX_HIGHLIGHTBKGND2, // changed
     COLORINDEX_HIGHLIGHTTEXT2,
+    COLORINDEX_HIGHLIGHTBKGND3, // insert or delete
 	//
 	COLORINDEX_USER1,
     COLORINDEX_USER2,
